--- a/index.html
+++ b/index.html
@@ -29,3 +29,5 @@
   ---
 
   <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+</body>
+</html>
