Add figure, caption and main text tags

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
 
   <header>
-    <img src="images/logo.svg" alt="">
+    <figure><img src="images/logo.svg" alt=""><figcaption>Logo</figcaption></figure>
     <h1>The Solar System</h1>
-
 
 <nav>
   <ul>
@@ -27,11 +26,13 @@
 
   ---
 
-  <img src="images/banner.svg" alt="">
-  <p>The Solar System—our home in the stars</p>
+  <figure><img src="images/banner.svg" alt=""><figcaption>Banner</figcaption><figure>
+  <main>
+    <p>The Solar System—our home in the stars</p>
 
   ---
 
-  <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+  </main>
 </body>
 </html>
