--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
 
 
   ---
-
-  <figure><img src="images/banner.svg" alt=""><figcaption>Banner</figcaption><figure>
-  <main>
+<main>
+  <figure><img src="images/banner.svg" alt=""><figcaption>Banner</figcaption></figure>
     <p>The Solar System—our home in the stars</p>
 
   ---
