Move figcaption down a line and add links to listed items

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <nav>
   <ul>
-    <li>Stars</li>
-    <li>Terrestrial planets</li>
-    <li>Gas giants</li>
-    <li>Dwarf planets</li>
-    <li>Asteroids</li>
-    <li>Comets</li>
+    <li><a>Stars</a></li>
+    <li><a>Terrestrial planets</a></li>
+    <li><a>Gas giants</a></li>
+    <li><a>Dwarf planets</a></li>
+    <li><a>Asteroids</a></li>
+    <li><a>Comets</a></li>
   </ul>
 </nav>
 </header>
@@ -26,7 +26,8 @@
 
   ---
 <main>
-  <figure><img src="images/banner.svg" alt=""><figcaption>Banner</figcaption></figure>
+  <figure><img src="images/banner.svg" alt=""></figure>
+  <figcaption>Banner</figcaption>
     <p>The Solar System—our home in the stars</p>
 
   ---
