Move figcaption line and adjust figure code lines

--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
 
   ---
 <main>
-  <figure><img src="images/banner.svg" alt=""></figure>
+  <figure>
+    <img src="images/banner.svg" alt="">
+    <figcaption>Banner</figcaption>
+  </figure>
     <p>The Solar System—our home in the stars</p>
 
   ---
 
     <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
   </main>
-  <figcaption>Banner</figcaption>
+
 </body>
 </html>
