--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 <body>
 
   <header>
-    <figure><img src="images/logo.svg" alt=""><figcaption>Logo</figcaption></figure>
+    <figure>
+      <img src="images/logo.svg" alt="">
+      <figcaption>Logo</figcaption>
+    </figure>
     <h1>The Solar System</h1>
 
 <nav>
   <ul>
-    <li><a>Stars</a></li>
-    <li><a>Terrestrial planets</a></li>
-    <li><a>Gas giants</a></li>
-    <li><a>Dwarf planets</a></li>
-    <li><a>Asteroids</a></li>
-    <li><a>Comets</a></li>
+    <li><a href="">Stars</a></li>
+    <li><a href="">Terrestrial planets</a></li>
+    <li><a href="">Gas giants</a></li>
+    <li><a href="">Dwarf planets</a></li>
+    <li><a href="">Asteroids</a></li>
+    <li><a href="">Comets</a></li>
   </ul>
 </nav>
 </header>
